test/Dialect/LLZK/logic_ops_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

function.def @f_and(
    %a: !llzk.felt, // expected-note {{prior use here}}
    %b: !llzk.felt
) -> i1 {
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: 'i1' vs '!llzk.felt'}}
  %c = llzk.and %a, %b
  function.return %c: i1
}
// -----

function.def @f_or(%a: !llzk.felt, %b: !llzk.felt) -> i1 {
  // expected-error@+1 {{'llzk.or' op operand #0 must be 1-bit signless integer or type variable, but got '!llzk.felt'}}
  %c = llzk.or %a, %b : !llzk.felt, !llzk.felt
  function.return %c: i1
}
// -----

function.def @f_not1(
    %a: !array.array<4 x !llzk.felt> // expected-note {{prior use here}}
) -> i1 {
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: 'i1' vs '!array.array<4 x !llzk.felt>'}}
  %c = llzk.not %a
  function.return %c: i1
}
// -----

function.def @f_not2(%a: !array.array<4 x !llzk.felt>) -> i1 {
  // expected-error@+1 {{'llzk.not' op operand #0 must be 1-bit signless integer or type variable, but got '!array.array<4 x !llzk.felt>'}}
  %c = llzk.not %a : !array.array<4 x !llzk.felt>
  function.return %c: i1
}
